--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
           <section class="mission">
             <h2>Mission</h2>
-            <p>Our mission is to empower businesses with tailored solutions that align with their unique goals and requirements. Through our expertise, collaborative approach, and cutting-edge technology solutions, we strive to streamline operations, enhance efficiency, and drive sustainable growth for our clients. </p>
+            <p>Bacon ipsum dolor amet pork loin sausage pastrami, brisket tri-tip rump turkey prosciutto frankfurter jowl shoulder andouille kielbasa bresaola pork belly. T-bone filet mignon turducken, burgdoggen picanha strip steak kielbasa short ribs tail. Tail leberkas meatball chislic short ribs kielbasa tri-tip turducken pork loin fatback spare ribs burgdoggen doner short loin turkey. Beef ribs flank rump swine, boudin chislic shankle cupim pastrami jerky. Boudin andouille tail corned beef t-bone sirloin biltong pastrami chislic. </p>
           </section>
           
           <section class="vision">
             <h2>Vision</h2>
-            <p>Our vision is to be the leader in revolutionizing how businesses harness the power of technology to thrive in the digital era. We aim to empower organizations across diverse sectors, helping them achieve operational excellence, competitive advantage, and long-term success.</p>
+            <p>Bacon ipsum dolor amet pork loin sausage pastrami, brisket tri-tip rump turkey prosciutto frankfurter jowl shoulder andouille kielbasa bresaola pork belly. T-bone filet mignon turducken, burgdoggen picanha strip steak kielbasa short ribs tail. Tail leberkas meatball chislic short ribs kielbasa tri-tip turducken pork loin fatback spare ribs burgdoggen doner short loin turkey. Beef ribs flank rump swine, boudin chislic shankle cupim pastrami jerky. Boudin andouille tail corned beef t-bone sirloin biltong pastrami chislic.</p>
            
           </section>
 
