added services boxes.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,54 @@
   </div>
 
 
+  <hr/>
+
+
+  <div id="services">
+    <div class="wrapper">
+      <div class="services_container">
+        <div class="services_boxes">
+
+          <section class="service_box1">
+            <h2>Technology</h2>
+            <hr/>
+            <p>Bacon ipsum dolor amet pork loin sausage pastrami, brisket tri-tip rump turkey prosciutto frankfurter jowl shoulder andouille kielbasa bresaola pork belly. T-bone filet mignon turducken, burgdoggen picanha strip steak kielbasa short ribs tail. Tail leberkas meatball chislic short ribs kielbasa tri-tip turducken pork loin fatback spare ribs burgdoggen doner short loin turkey. Beef ribs flank rump swine, boudin chislic shankle cupim pastrami jerky. Boudin andouille tail corned beef t-bone sirloin biltong pastrami chislic. </p>
+            <a href="javascript::"></a>
+          </section>
+          
+          <section class="service_box2">
+            <h2>Technology</h2>
+            <hr/>
+            <p>Bacon ipsum dolor amet pork loin sausage pastrami, brisket tri-tip rump turkey prosciutto frankfurter jowl shoulder andouille kielbasa bresaola pork belly. T-bone filet mignon turducken, burgdoggen picanha strip steak kielbasa short ribs tail. Tail leberkas meatball chislic short ribs kielbasa tri-tip turducken pork loin fatback spare ribs burgdoggen doner short loin turkey. Beef ribs flank rump swine, boudin chislic shankle cupim pastrami jerky. Boudin andouille tail corned beef t-bone sirloin biltong pastrami chislic.</p>
+           <a href="javascript::"></a>
+          </section>
+
+          <section class="service_box3">
+            <h2>Technology</h2>
+            <hr/>
+            <p>Bacon ipsum dolor amet pork loin sausage pastrami, brisket tri-tip rump turkey prosciutto frankfurter jowl shoulder andouille kielbasa bresaola pork belly. T-bone filet mignon turducken, burgdoggen picanha strip steak kielbasa short ribs tail. Tail leberkas meatball chislic short ribs kielbasa tri-tip turducken pork loin fatback spare ribs burgdoggen doner short loin turkey. Beef ribs flank rump swine, boudin chislic shankle cupim pastrami jerky. Boudin andouille tail corned beef t-bone sirloin biltong pastrami chislic.</p>
+           <a href="javascript::"></a>
+          </section>
+
+          <section class="service_box4">
+            <h2>Technology</h2>
+            <hr/>
+            <p>Bacon ipsum dolor amet pork loin sausage pastrami, brisket tri-tip rump turkey prosciutto frankfurter jowl shoulder andouille kielbasa bresaola pork belly. T-bone filet mignon turducken, burgdoggen picanha strip steak kielbasa short ribs tail. Tail leberkas meatball chislic short ribs kielbasa tri-tip turducken pork loin fatback spare ribs burgdoggen doner short loin turkey. Beef ribs flank rump swine, boudin chislic shankle cupim pastrami jerky. Boudin andouille tail corned beef t-bone sirloin biltong pastrami chislic.</p>
+           <a href="javascript::"></a>
+          </section>
+
+          <section class="service_box5">
+            <h2>Technology</h2>
+            <hr/>
+            <p>Bacon ipsum dolor amet pork loin sausage pastrami, brisket tri-tip rump turkey prosciutto frankfurter jowl shoulder andouille kielbasa bresaola pork belly. T-bone filet mignon turducken, burgdoggen picanha strip steak kielbasa short ribs tail. Tail leberkas meatball chislic short ribs kielbasa tri-tip turducken pork loin fatback spare ribs burgdoggen doner short loin turkey. Beef ribs flank rump swine, boudin chislic shankle cupim pastrami jerky. Boudin andouille tail corned beef t-bone sirloin biltong pastrami chislic.</p>
+           <a href="javascript::"></a>
+          </section>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   
   
